--- a/WebContent/components/core/css/style.css
+++ b/WebContent/components/core/css/style.css
@@ -4,3 +4,15 @@
 .navbar-xs .navbar-brand { padding: 0px 12px; font-size: 16px; line-height: 28px; }
 .navbar-xs .navbar-nav > li > a {  padding-top: 0px; padding-bottom: 0px; line-height: 28px; border: 1;}
 
+li {
+    position : relative;
+    margin-left :0px;
+    height : 28px;
+}
+
+.nav-tabs > li > a
+{
+    /* adjust padding for height*/
+    padding-top: 4px; 
+    padding-bottom: 4px;
+}
